--- a/setup.cfg
+++ b/setup.cfg
@@ -14,5 +14,5 @@ packages =
 
 [entry_points]
     console_scripts =
-        did_you_client = did_you.client.command:run_client
+        did_you_client = did_you_client.command:run_client
         did_you_checker = did_you_client.command:run_checker
